// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Using Vue Option adds vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  
});
    "
`;

exports[`Vue Project Usage adds VueX and Vue Router to Vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  store,router
});
    "
`;

exports[`Vue Project with Vue Router adds Vue Router to Vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  router
});
    "
`;

exports[`Vue Project with VueX adds VueX to Vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  store
});
    "
`;

exports[`generator-lilly:app adds vue instance to app.js 1`] = `
"
new Vue({
  el: '#app',
  render: createElement => createElement(App),
  
});
    "
`;
